2015-01-20  Babak Shafiei  <bshafiei@apple.com>

        Merge r173501.

    2014-09-10  Tim Horton  <timothy_horton@apple.com>

            Call setCollectsTimingData only once, and before making any {CF,NS}URLConnections
            https://bugs.webkit.org/show_bug.cgi?id=136731
            <rdar://problem/18252844>

            Reviewed by Simon Fraser.

            * platform/network/cf/ResourceHandleCFNet.cpp:
            (WebCore::ResourceHandle::start):
            Move setCollectsTimingData to before createCFURLConnection, so the first connection
            has timing data associated with it.

            * platform/network/mac/ResourceHandleMac.mm:
            (WebCore::ResourceHandle::createNSURLConnection):
            Move setCollectsTimingData to before we create our NSURLConnection, so the first connection
            has timing data associated with it.
            Use setCollectsTimingData instead of the NSURLConnection SPI directly.

            (WebCore::ResourceHandle::setCollectsTimingData):
            Only call _setCollectsTimingData once.

2015-01-20  Babak Shafiei  <bshafiei@apple.com>

        Merge r173071.

    2014-08-27  Enrica Casucci  <enrica@apple.com>

            textStylingAtPosition returns incorrect values after executing toggleBold, toggleItalic and toggleUnderline.
            https://bugs.webkit.org/show_bug.cgi?id=136323
            rdar://problem/18141964

            Reviewed by Antti Koivisto.

            For underline style we need to check typingStyle first and use that information to populate
            the dictionary. If there is no typing style we can use the render style.

            * WebCore.exp.in:
            * editing/ios/EditorIOS.mm:
            (WebCore::Editor::fontAttributesForSelectionStart):

2015-01-20  Babak Shafiei  <bshafiei@apple.com>

        Merge r172797.

    2014-08-20  Zalan Bujtas  <zalan@apple.com>

            Dashed/dotted borders do not paint.